# chora-cvm

./: .gitignore  CLAUDE.md  README.md  genesis.py  pyproject.toml
docs/: agent-instructions.md  root-CLAUDE.md
origin/: somatic-architecture.md
scripts/: audit_coverage.py  audit_docs.py  genesis_origin_story.py  merge_databases.py
src/chora_cvm/: __init__.py  api.py  cli.py  cloud_cli.py  context.py  engine.py  genesis_behaviors.py  genesis_build.py  genesis_crystal.py  genesis_habitation.py  genesis_protocols.py  genesis_provenance.py  genesis_stories.py  invitation.py  keyring.py  metabolic.py  prune.py  registry.py  rhythm.py  runner.py  schema.py  semantic.py  std.py  store.py  sync_bridge.py  sync_router.py  vm.py  worker.py
tests/: conftest.py
tests/features/: asset_ownership.feature  autopoietic_tools.feature  bond_confidence.feature  build_governance.feature  circle_sync_policy.feature  cloud_cli.feature  convergence.feature  db_sense.feature  doc_maintenance.feature  embedding_persistence.feature  engine.feature  entity_hooks.feature  exit_node.feature  focus.feature  horizon.feature  inhabits_bond.feature  integrity.feature  invitation.feature  io_membrane.feature  keyring.feature  legacy_harvest.feature  metabolic.feature  protocol_palette.feature  prune.feature  prune_approval.feature  prune_detect.feature  pulse.feature  reflex_indexing.feature  rhythm.feature  semantic_primitives.feature  sense_rhythm.feature  stigmergic_layout.feature  sync_bridge.feature  sync_router.feature  tools_api.feature
tests/integration/: __init__.py  (+1 more)
(+62 files in other folders)
