[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "chora-cvm"
version = "0.1.0"
description = "Chora Core Virtual Machine (vNext) - Event-sourced, graph-interpreted kernel"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.0",
    "huey>=2.5.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
]

[project.optional-dependencies]
test = [
    "pytest>=7.4",
    "pytest-cov>=4.0",
    "pytest-bdd>=7.0",
]
dev = [
    "chora-cvm[test]",
    "ruff>=0.8",
    "mypy>=1.7",
    "bandit>=1.7",
    "pre-commit>=3.6",
]

[tool.hatch.build.targets.wheel]
packages = ["src/chora_cvm"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=src/chora_cvm --cov-report=term-missing --cov-fail-under=80"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "S", "UP", "RUF"]
ignore = [
    "E501",
]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.10"
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = false
check_untyped_defs = false
ignore_missing_imports = true

[tool.bandit]
exclude_dirs = ["tests"]
